# template-python-lint

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
