[project]
name = "template-python-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fernando-peres", email = "fernando.peres@icloud.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[dependency-groups]
lint = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]
